WIP: separate client config from tunnels and use modal component

--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -8,4 +8,9 @@ html {
 
 body {
   overscroll-behavior: none;
+  --wails-draggable: drag;
+}
+
+input, button, select {
+  --wails-draggable: no-drag;
 }
