--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -11,6 +11,6 @@ body {
   --wails-draggable: drag;
 }
 
-textarea, input, button, select, ul, li {
+textarea, input, button, select, ul, li, td, dd{
   --wails-draggable: no-drag;
 }
