use eslint+prettier for formatting, and add click to copy in Instructions

--- a/frontend/public/please-wait/please-wait.css
+++ b/frontend/public/please-wait/please-wait.css
@@ -3,6 +3,10 @@ body.pg-loading {
   overflow: hidden;
 }
 
+.pg-loading-logo {
+    width: 100px;
+}
+
 /* line 21, ../src/please-wait.scss */
 .pg-loading-screen {
   position: fixed;
