--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -11,6 +11,14 @@ body {
   --wails-draggable: drag;
 }
 
-textarea, input, button, select, ul, li, td, dd, .no-drag {
+textarea,
+input,
+button,
+select,
+ul,
+li,
+td,
+dd,
+.no-drag {
   --wails-draggable: no-drag;
 }
