use fonts from @fontsource/inter

--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+  @font-face {
+    font-family: "InterVariable";
+  }
+}
+
 html {
   height: 100%;
 }
