--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -17,6 +17,11 @@ body {
   --wails-draggable: drag;
 }
 
+body,
+button {
+  transition: background-color 0.1s ease, color 0.1s ease;
+}
+
 textarea,
 input,
 button,
