rename binding package and alias background colors

--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -8,6 +8,15 @@
   }
 }
 
+@layer base {
+  .canvas-bg-color {
+    @apply bg-canvas dark:bg-slate-900;
+  }
+  .row-content-bg-color {
+    @apply bg-gray-50 dark:bg-slate-800/50;
+  }
+}
+
 html {
   height: 100%;
 }
